# tuniq

./: .gitignore  .vercelignore  README.md  package.json  railway.json
apps/desktop/: vite.config.ts
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/relay/: Dockerfile  package.json
apps/relay/src/: index.ts  protocol.test.ts  protocol.ts
apps/web/: README.md  next.config.ts  package.json
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/20260515044004_init/: migration.sql
apps/web/prisma/migrations/20260515045100_hashed_agent_enrollment/: migration.sql
apps/web/prisma/migrations/20260515123000_route_access_timeout/: migration.sql
apps/web/prisma/migrations/20260515133000_transfer_usage_limit/: migration.sql
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/agent/heartbeat/: route.ts
apps/web/src/app/api/agent/register/: route.ts
apps/web/src/app/api/agents/: route.ts
apps/web/src/app/api/mcp/: route.ts
apps/web/src/app/api/relay/resolve/: route.ts
apps/web/src/app/api/relay/usage/: route.ts
apps/web/src/app/d/tuniq-desktop/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/: agent-enrollment-form.tsx  auth-form.tsx  marketing-hero-scene.tsx  routes-table.tsx  sign-out-button.tsx  theme-toggle.tsx
apps/web/src/lib/: actions.ts  audit.ts  auth.ts  billing.ts  dashboard.ts  plan.ts  prisma.ts  security.ts  session.ts  stripe.ts  transfer-usage.ts
(+3 files in other folders)
